--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -31,7 +31,7 @@
         tools:targetApi="lollipop" />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/select_circle_image"
+        android:id="@+id/btn_select_circle_image"
         android:layout_width="150dp"
         android:layout_height="150dp"
         app:layout_constraintBottom_toBottomOf="@+id/btn_select_photo"
