--- a/app/src/main/res/layout/activity_slider.xml
+++ b/app/src/main/res/layout/activity_slider.xml
@@ -21,11 +21,12 @@
         android:layout_height="match_parent">
 
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/logoFirstView"
-            android:layout_width="173dp"
-            android:layout_height="202dp"
-            android:elevation="10dp"
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/img_logo_first_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:elevation="12dp"
+            android:scaleType="fitXY"
             app:civ_border_overlay="true"
             app:civ_border_width="4dp"
             app:civ_border_color="@color/white"
@@ -34,10 +35,11 @@
             app:layout_constraintHorizontal_bias="0.48"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.19999999" />
+            app:layout_constraintVertical_bias="0.19999999"
+            tools:ignore="UnusedAttribute" />
 
         <TextView
-            android:id="@+id/title_first_view"
+            android:id="@+id/txt_title_first_view"
             style="@style/TextAppearance.AppCompat.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -50,12 +52,12 @@
             android:elevation="10dp"
             android:textSize="30sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/logoFirstView"
-            app:layout_constraintStart_toStartOf="@+id/logoFirstView"
-            app:layout_constraintTop_toBottomOf="@+id/logoFirstView" />
+            app:layout_constraintEnd_toEndOf="@+id/img_logo_first_view"
+            app:layout_constraintStart_toStartOf="@+id/img_logo_first_view"
+            app:layout_constraintTop_toBottomOf="@+id/img_logo_first_view" />
 
         <TextView
-            android:id="@+id/desc_view"
+            android:id="@+id/txt_desc_view"
             style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -69,12 +71,12 @@
             android:elevation="10dp"
             android:textSize="14sp"
             android:typeface="monospace"
-            app:layout_constraintEnd_toEndOf="@+id/title_first_view"
-            app:layout_constraintStart_toStartOf="@+id/title_first_view"
-            app:layout_constraintTop_toBottomOf="@+id/title_first_view" />
+            app:layout_constraintEnd_toEndOf="@+id/txt_title_first_view"
+            app:layout_constraintStart_toStartOf="@+id/txt_title_first_view"
+            app:layout_constraintTop_toBottomOf="@+id/txt_title_first_view" />
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/cardViewFirstView"
+            android:id="@+id/cv_first_view"
             android:layout_width="0dp"
             android:layout_height="230dp"
             android:layout_marginBottom="8dp"
@@ -92,7 +94,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/cardViewFirstView2"
+            android:id="@+id/cv_first_view_2"
             android:layout_width="0dp"
             android:layout_height="306dp"
             android:layout_marginBottom="8dp"
@@ -100,9 +102,9 @@
             app:cardBackgroundColor="#00FFFFFF"
             app:cardElevation="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/cardViewFirstView"
-            app:layout_constraintStart_toStartOf="@+id/cardViewFirstView"
-            app:layout_constraintTop_toBottomOf="@+id/cardViewFirstView"
+            app:layout_constraintEnd_toEndOf="@+id/cv_first_view"
+            app:layout_constraintStart_toStartOf="@+id/cv_first_view"
+            app:layout_constraintTop_toBottomOf="@+id/cv_first_view"
             app:layout_constraintVertical_bias="0.0">
 
         </androidx.cardview.widget.CardView>
