--- a/app/src/main/res/layout/item_slider.xml
+++ b/app/src/main/res/layout/item_slider.xml
@@ -16,22 +16,21 @@
 
 <!--    android:background="@drawable/background_1"-->
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/img_bg_root_slide"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/ic_slider_1"
-        android:elevation="0dp"
-        tools:ignore="UnusedAttribute" />
+<!--    <androidx.appcompat.widget.AppCompatImageView-->
+<!--        android:id="@+id/img_bg_root_slide"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:background="@drawable/ic_slider_1"-->
+<!--        android:elevation="0dp"-->
+<!--        tools:ignore="UnusedAttribute" />-->
 
+<!--    android:layout_above="@+id/ln_dot_slide"-->
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/vp_slide_view_pager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/ln_dot_slide"
+        android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="40dp"
         android:layout_alignParentLeft="true"
         android:elevation="8dp"
         tools:ignore="UnusedAttribute" />
@@ -45,7 +44,8 @@
         android:gravity="center_horizontal|center|center_vertical"
         android:orientation="horizontal"
         android:padding="20dp"
-        android:elevation="8dp"
+        android:elevation="14dp"
+        android:alpha="0.0"
         tools:ignore="UnusedAttribute" >
 
     </LinearLayout>
@@ -63,6 +63,7 @@
         android:visibility="invisible"
         android:layout_alignParentLeft="true"
         android:elevation="8dp"
+        android:alpha="0.0"
         tools:ignore="UnusedAttribute"  />
 
     <com.google.android.material.button.MaterialButton
@@ -74,10 +75,11 @@
         android:layout_alignParentBottom="true"
         android:layout_alignTop="@+id/ln_dot_slide"
         android:text="@string/item_slider_next"
+        android:alpha="0.0"
         android:textColor="@android:color/white"
         android:layout_alignParentRight="true"
         android:elevation="8dp"
-        tools:ignore="UnusedAttribute" />
+        tools:ignore="RelativeOverlap,UnusedAttribute" />
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_finish"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
@@ -87,6 +89,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignTop="@+id/ln_dot_slide"
         android:text="@string/item_slider_finish"
+        android:alpha="0.0"
         android:visibility="invisible"
         android:textColor="@android:color/white"
         android:layout_alignParentRight="true"
